--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 70%;
+    width: 1400px;
     gap: 100px;
 }
 .FeatureCompanies img{
@@ -256,7 +256,7 @@ body{
 }
 .stroke{
     height: 350px;
-    width: 80%;
+    width: 1700px;
     background-image: url(./Assests/Stroke.svg);
     background-size: contain;
     background-repeat: no-repeat;
@@ -269,7 +269,7 @@ body{
     padding: 120px 0 0 120px ;
     display: grid;
     grid-template-columns: 1fr 1fr  1fr 1fr  1fr ;
-    width: 100%;
+    width: 1700px;
 }
 .group_icon img{
     display: grid;
@@ -394,4 +394,617 @@ body{
     color: #ffffff;
     font-size: 19px;
     font-weight: 500;
+}
+.security{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+}
+.SecurityTextButton{
+    width: 260px;
+    height: 60px;
+    text-align: center;
+    background-color: #6953D31F;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.SecurityTextButton p{
+    color: #6953D3;
+     font-size: 17px;
+     font-weight: 500;
+}
+.SecuritySectionText h1{
+    color: #333333;
+    font-size: 40px;
+    font-weight: 700;
+    padding-bottom: 50px;
+}
+.SecuritySectionText h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+.SecuritySectionText p{
+    color: #44444499;
+    width: 500px;
+    font-size: 17px;
+    font-weight: 500;
+    text-align: justify;
+    line-height: 30.01px;
+    padding-bottom: 50px;
+}
+.SecuritySectionText #TextBlock{
+    width: 500px;
+    height: 220px;
+    border-radius: 10px;
+    background-color: #6953D326;
+    padding: 20px;
+}
+#TextBlock h2{
+    width: 100%;
+    color: #4B2FD2;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 30.01px;
+    text-align: justify;
+    padding-bottom: 15px;
+}
+#TextBlock span{
+    margin-left: 75px;
+    color: #4B2FD2;
+    text-align: center;
+    transform: rotate(180deg);
+}
+#TextBlock p{
+    width: 400px;
+    color: #44444499;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30.01px;
+    text-align: justify;
+}
+.ReadMoreBlock{
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 20px ;
+    row-gap: 20px;
+}
+#ReadMoreBlock-group{
+    display: flex;
+    justify-content: space-between;
+}
+#ReadMoreBlock-group h2{
+    color: #444444;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 30.01px;
+    text-align: justify;
+}
+#ReadMoreBlock-group span{
+    color: #444444;
+}
+.Chrome{
+    background-color: #E7E5E5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    width: 240px;
+    height: 70px;
+    text-decoration: none;
+    gap: 10px;
+}
+.Chrome h2 {
+    font-weight: 100;
+    color: #444444;
+
+}
+.Chrome p{
+    color: #444444;
+    font-size: 10px;
+    font-weight: 500;
+}
+.Chrome span{
+    color: #444444;
+    font-size: 11px;
+    font-weight: 600;
+}
+.darkTheme{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
+}
+.DarkThemeText{
+    width: 180px;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #6953D31F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.DarkThemeText p{
+    color: #6953D3;
+    font-size: 17px;
+    font-weight: 500;
+    text-align: center;
+}
+.DarkThemeRight h1{
+    color: #333333;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48.41px;
+    text-align: left;
+    padding-bottom: 50px;
+}
+.DarkThemeRight h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+.DarkThemeRight h6{
+    color: #44444499;
+    width: 400px;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 30.01px;
+    text-align: justify;
+   padding-bottom: 40px;
+}
+.DarkThemeRight ul{
+    padding: 20px;
+}
+.DarkThemeRight ul li{
+    color: #44444499;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 35.3px;
+    text-align: justify;
+}
+.DarkThemeRight ul li span{
+    color: #333333;
+}
+.btn_discovery{
+    background-color: #6953D3;
+    width: 180px;
+    height: 50px;
+    margin-top: 60px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+}
+.btn_discovery:hover{
+    scale: 1.1;
+}
+.btn_discovery p{
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 500;
+    
+}
+.PopularApp{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+}
+.PopularAppTextButton{
+    width: 200px;
+    height: 50px;
+    background-color: #6953D31F;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.PopularAppTextButton p{
+    color: #6953D3;
+    font-size: 17px;
+    font-weight: 500;
+}
+.PopularApp h1{
+    color: #333333;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48.41px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+.PopularApp h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+.PopularApp h2{
+    color: #00000099;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26.48px;
+    text-align: center;
+}
+.PhoneImages{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    gap: 85px;
+    background-color: #F9F4F4;
+    padding: 20px;
+}
+.Testimonial{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.TestimonialTextButton{
+    width: 160px;
+    height: 50px;
+    background-color: #6953D31F;
+    border-radius: 5px;
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.TestimonialTextButton h5{
+    color: #6953D3;
+    font-size: 17px;
+    font-weight: 500;
+}
+#Testimonials-text h5{
+    color: #6953D3;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.TestimonialLeft h1{
+    color: #333333;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48.41px;
+    margin-bottom: 20px;
+    
+}
+.TestimonialLeft h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+.TestimonialLeft p{
+    color: #44444499;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 30.01px;
+    text-align: justify;
+    margin-bottom: 50px;
+}
+.appicons_box{
+    display: flex;
+    gap: 50px;
+}
+.appicons_box #LineImage{
+    height: 180px;
+}
+.app_group{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.app_group h1{
+    color: #5038C6;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: justify;
+    height: 20px;
+}
+.app_group #first_image{
+    margin-bottom: 30px;
+}
+.app_group p{
+    color: #444444;
+    font-size: 15px;
+    font-weight: 500;
+}
+.testimonials_button{
+    display: flex;
+    gap: 40px;
+}
+.review_btn{
+    width: 300px;
+    height: 50px;
+    background-color: #6953D3;
+    border-radius: 50px ;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.review_btn:hover{
+    scale: 1.1;
+}
+.review_btn h3{
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 600;
+}
+.promotion_btn{
+    width: 300px;
+    height: 50px;
+    gap: 20px;
+    cursor: pointer;
+    display: flex;
+}
+.promotion_btn p{
+    color: #333333;
+    font-size: 17px;
+    font-weight: 500;
+}
+.TestimonialLeft{
+    height: 700px;
+    width: 700px;
+    margin-top: 100px;
+}
+.TestimonialRight{
+    height: 700px;
+    width: 700px;
+    background-image: url(./Assests/contact_globe\ 1.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.reviews-section{
+    display: flex;
+    flex-direction: column;
+}
+.review-group{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 440px;
+    height: 150px;
+    border-radius: 30px;
+    gap: 20px;
+    margin-top: 50px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+}
+.review{
+    width: 300px;
+}
+.review h4{
+    color: #444444;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 19.42px;
+    text-align: justify;
+}
+.review h6{
+    color: #444444;
+    font-size: 7px;
+    font-weight: 400;
+    line-height: 12.36px;
+    text-align: justify;
+}
+.review h6 span{
+    color: rgb(51, 203, 233);
+}
+
+.social-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.SocialTabButton{
+    width: 200px;
+    height: 50px;
+    background-color: #6953D31F;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.SocialTabButton p{
+    color: #6953D3;
+    font-size: 17px;
+    font-weight: 500;
+}
+.social-section h1{
+    color: #333333;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48.41px;
+}
+.social-section h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.SocialIcons{
+    width: 1200px;
+    height: 200px;
+    margin-top: 25px;
+    border-radius: 20px;
+    padding: 60px;
+    border: 1px solid #00000066;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.socialIcon{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+}
+.socialIcon img{
+    width: 100px;
+    height: 100px;
+ }
+.socialIcon h2{
+    color: #444444;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 25px;
+    text-align: justify;
+}
+.socialIcon h2 span{
+    color: #444444;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: justify;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(./Assests/Footer.svg);
+    width: 100%;
+    height: 620px;
+    background-size: cover;
+    margin-top: 100px;
+    padding-top: 200px;
+}
+.FooterHeader h1{
+    color: #333333;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48.41px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.FooterHeader h1 span{
+    background: linear-gradient(90.37deg, #6953D3 26.98%, #8566F1 49.72%, #A14EEE 72.46%, #F98085 95.21%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+.FooterHeader p{
+    color: #00000099;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 50px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.FooterDownloadButtons{
+    display: flex;
+    gap: 30px;
+    margin-bottom: 100px;
+}
+.AppStore_btn{
+    background-color: #6953D3;
+    width: 360px;
+    height: 60px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.PlayStore_btn{
+    border: 1px solid #000000;
+    width: 360px;
+    height: 60px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.AppStore_btn p{
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+}
+.AppStore_btn span{
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+}
+.PlayStore_btn p{
+    color: #333333;
+    font-size: 18px;
+    font-weight: 500;
+}
+.PlayStore_btn span{
+    color: #333333;
+    font-size: 18px;
+    font-weight: 500;
+}
+.FooterBar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 200px;
+}
+.FooterBar ul {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    list-style-type:none;
+}
+.Footer ul li{
+    color: #444444;
+    font-size: 17px;
+    font-weight: 700;
+    text-align: left;
+}
+.FooterBar ul li:first-child{
+    color: #6953D3;
+}
+.Language{
+    display: flex;
+    gap: 20px;
+}
+.Lang-Eng{
+    color: #00000099;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+#Footer_line{
+    width: 1150px;
+    margin-top: 20px;
+}
+.copyWrite{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+.copyWrite p{
+    color: #00000099;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 26.48px;
+    text-align: justify;
+}
+.copyWrite p span{
+    color: #333333;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 26.48px;
 }
