--- a/style.css
+++ b/style.css
@@ -1339,6 +1339,7 @@ body{
     .NavMenu img {
         width: 30px;
         height: 30px;
+        fill: #000000;
     }
     .nav-logo{
         width: 150px;
